--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = [".", "entity", "migration"]
+members = [".", "cert", "entity", "migration"]
 
 [dependencies]
 entity = { path = "entity" }
@@ -20,6 +20,6 @@ axum = { version = "0.8.1", features = ["macros"] }
 serde = { version = "1.0.218", features = ["derive"] }
 anyhow = "1.0.97"
 serde_derive = "1.0.219"
-sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
+sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
 log = "0.4.27"
 serde_json = "1.0.140"
