--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ serde_derive = "1.0.219"
 sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
 log = "0.4.27"
 serde_json = "1.0.140"
+futures = "0.3.31"
