--- a/cert/Cargo.toml
+++ b/cert/Cargo.toml
@@ -12,6 +12,6 @@ url = "2.5.4"
 openssl = "0.10.73"
 regex = "1.11.1"
 once_cell = "1.21.3"
-tokio = { version = "1.45.1", features = ["time", "rt"] }
+tokio = { version = "1.45.1", features = ["time", "rt", "macros"] }
 futures = "0.3.31"
 sea-orm = "1.1.12"
