--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -4,3 +4,6 @@ DISABLE_LINTERS:
   - MARKDOWN_MARKDOWN_LINK_CHECK
 MARKDOWN_MARKDOWNLINT_ARGUMENTS: --disable MD024
 COPYPASTE_JSCPD_DISABLE_ERRORS: true
+PRE_COMMANDS:
+  - command: "apk add openssl-dev musl-dev openssl-libs-static"
+    cwd: "root"
